--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.479.0",
     "next": "15.1.6",
+    "next-themes": "^0.4.5",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
